--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ input.search{
     text-align: left;
     padding: 9px 10px 9px 32px;
     outline: none;
-    font-size: 35px;
+    font-size: 25px;
     border: 10px;
     border-radius: 6px;
     color: #444;
@@ -239,4 +239,51 @@ input.search{
 hr {
     border: 1px solid #ffffff; /* Estilo del borde */
     margin: 70px 0; /* Márgenes superior e inferior */
+}
+.containerdown {
+    
+    background-color: black;
+    color: white;
+}
+
+.container_info {
+    padding: 1.5em 5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.title {
+    font-size: calc(.5vw + .7em);
+    margin-bottom:2rem;
+    font-weight: bold;
+}
+
+.subtitles {
+    font-size: calc(.5vw + .3em);
+    margin-bottom:0.3rem;
+}
+
+.title_subtitle {
+    font-size: calc(.5vw + .4em);
+    margin-top: 1rem;
+    margin-bottom:0.3rem;
+    font-weight: bold;
+}
+
+.mail_subtitle {
+    font-size: calc(.5vw + .3em);
+    margin-top:0.3rem;
+}
+
+footer {
+    padding: 2em 5em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: calc(.5vw + .5em);
+}
+
+.footer_info {
+    margin: 0.2rem;
 }
